--- a/src/Treehouse.FitnessFrog/Treehouse.FitnessFrog.csproj
+++ b/src/Treehouse.FitnessFrog/Treehouse.FitnessFrog.csproj
@@ -139,6 +139,7 @@
     <Content Include="Views\Entries\Edit.cshtml" />
     <Content Include="Views\Entries\Delete.cshtml" />
     <Content Include="Views\Shared\_Logo.cshtml" />
+    <Content Include="Views\Entries\_EntryForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
